2009-01-04  Ralf Juengling  <juenglin@cs.pdx.edu>

	* src/gp_types.h src/plot2d.c (get_data):  Fix column accounting for
	variable color attribute in the case that no explicit 'using' spec
	is given.

2009-01-03  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in, docs/gnuplot.doc:
	Remove the EXPERIMENTAL warning for plotstyle 'image', for 'set object',
	for x11 terminal features 'binary polygons' and 'external window',
	and for the cairo-based terminals pngcairo and pdfcairo.

2009-01-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (set_plot_with_palette is_plot_with_colorbox):
	Fix an accounting error that caused unnecessary loading of a color
	palette into plots that do not need one.

2008-12-31  Ralf Juengling  <juenglin@cs.pdx.edu>

	* src/gp_types.h: Fix duplicate plot style indices for 
	RGBA_IMAGE and CIRCLES.

2008-12-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Allow further options to modify a line style.
	E.g.  plot ... with points ls 1 ps variable

2008-12-27  Allin Cottrell  <cottrell@wfu.edu>

	* util.c (gprintf): Allow '#' format character.

2008-12-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc docs/Makefile.in term/lua.trm: Various fixes.

2008-12-26  Ethan Merritt  <merritt@u.washington.edu>

	* term/mac.trm: extra spaces are messing up the documentation..

	* src/graphics.c (boundary) color.c (draw_color_smooth_box):
	Clean up border placement code, fix colorbox bug.

2008-12-24  Mike Sutton  <mws115@usa.com>

	* term/x11.trm src/gplt_x11.c: Added size and position options for X11.

2008-12-23  Ethan Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in demo/all.dem src/Makefile.am:
	Clean up autoconf dependencies for lua terminal and for demos.

2008-12-21  Peter Hedwig  <peter@affenbande.org>

	* configure.in src/Makefile.am src/term.h term/Makefile.am.in
	term/lua/ChangeLog term/lua/gnuplot.lua term/lua/gnuplot-lua-tikz.sty